--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.8.4",
     "chart.js": "^4.4.9",
+    "date-fns": "^4.1.0",
     "json-server": "^1.0.0-beta.3",
     "tailwindcss": "^4.1.4",
     "vue": "^3.5.13",
